Avance del proyectoa la mitad

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,7 @@
     "comma-spacing": [2, { "before": false, "after": true }],
     "comma-style": [2, "last"],
     "complexity": 0,
-    "consistent-return": 1,
+    "consistent-return": 0,
     "consistent-this": 0,
     "curly": [2, "multi-line"],
     "default-case": 0,
@@ -69,7 +69,7 @@
     "no-dupe-args": 2,
     "no-dupe-keys": 2,
     "no-duplicate-case": 2,
-    "no-else-return": 2,
+    "no-else-return": ["error", { "allowElseIf": true }],
     "no-empty": 0,
     "no-empty-character-class": 2,
     "no-labels": 2,
