Actualización del proyecto.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,27 +1,59 @@
 {
   "env": {
     "browser": true,
-    "es6": true,
-    "node": true
+    "es2021": true
   },
-  "extends": ["airbnb", "prettier", "plugin:prettier/recommended"],
-  "globals": {
-    "document": false,
-    "escape": false,
-    "navigator": false,
-    "unescape": false,
-    "window": false,
-    "describe": true,
-    "before": true,
-    "it": true,
-    "expect": true,
-    "sinon": true
+  "extends": [
+    "plugin:react/recommended",
+    "plugin:react/jsx-runtime",
+    "eslint-config-prettier",
+    "airbnb"
+  ],
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   },
-  "parser": "babel-eslint",
-  "plugins": ["react", "jsx-a11y", "import", "prettier"],
+  "overrides": [],
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": 12,
+    "sourceType": "module"
+  },
+  "plugins": ["react"],
   "rules": {
-    "prettier/prettier": "error",
-    "react/jsx-filename-extension": 0,
+    "max-len": ["error", { "code": 175 }],
+    "max-statements-per-line": ["error", { "max": 1 }],
+    "implicit-arrow-linebreak": "off",
+    "prettier/prettier": 0,
+    "function-paren-newline": "off",
+    "comma-dangle": [
+      "error",
+      {
+        "arrays": "always-multiline",
+        "objects": "always-multiline",
+        "imports": "always-multiline",
+        "exports": "always-multiline",
+        "functions": "always-multiline"
+      }
+    ],
+    "no-restricted-syntax": [
+      "error",
+      {
+        "selector": "FunctionExpression",
+        "message": "Function expressions are not allowed."
+      },
+      {
+        "selector": "CallExpression[callee.name='setTimeout'][arguments.length!=2]",
+        "message": "setTimeout must always be invoked with two arguments."
+      }
+    ],
+    "react/no-danger": 0,
+    "default-param-last": 0,
+    "react/jsx-filename-extension": 1,
+    "react/no-array-index-key": 1,
     "array-bracket-spacing": 2,
     "arrow-body-style": 0,
     "block-scoped-var": 2,
@@ -29,7 +61,7 @@
     "comma-spacing": [2, { "before": false, "after": true }],
     "comma-style": [2, "last"],
     "complexity": 0,
-    "consistent-return": 0,
+    "consistent-return": 1,
     "consistent-this": 0,
     "curly": [2, "multi-line"],
     "default-case": 0,
@@ -46,7 +78,6 @@
     "key-spacing": [2, { "beforeColon": false, "afterColon": true }],
     "linebreak-style": 0,
     "max-depth": 0,
-    "max-len": [2, 1550, 4],
     "max-nested-callbacks": 0,
     "max-params": 0,
     "max-statements": 0,
@@ -69,7 +100,7 @@
     "no-dupe-args": 2,
     "no-dupe-keys": 2,
     "no-duplicate-case": 2,
-    "no-else-return": ["error", { "allowElseIf": true }],
+    "no-else-return": 2,
     "no-empty": 0,
     "no-empty-character-class": 2,
     "no-labels": 2,
@@ -147,14 +178,14 @@
     "object-curly-spacing": [2, "always"],
     "one-var": 0,
     "operator-assignment": 0,
-    "operator-linebreak": [2, "after"],
+    "operator-linebreak": [0, "before"], //Revisar compatibilidad con pretier.
     "padded-blocks": 0,
     "prefer-const": 2,
     "quote-props": 1,
     "quotes": [2, "double", "avoid-escape"],
     "radix": 2,
     "jsx-quotes": [2, "prefer-double"],
-    "jsx-a11y/click-events-have-key-events": 0,
+    "jsx-a11y/click-events-have-key-events": 1,
     "jsx-a11y/no-noninteractive-element-interactions": 0,
     "jsx-a11y/media-has-caption": 0,
     "react/display-name": 0,
@@ -162,6 +193,7 @@
     "react/jsx-closing-bracket-location": 2,
     "react/jsx-curly-spacing": [2, "never"],
     "react/jsx-equals-spacing": [2, "never"],
+    "react/jsx-indent": [2, 2],
     "react/jsx-indent-props": [2, 2],
     "react/jsx-no-bind": [2, { "allowArrowFunctions": true }],
     "react/jsx-no-undef": 2,
@@ -186,10 +218,7 @@
     "semi-spacing": 0,
     "sort-vars": 0,
     "space-before-blocks": [2, "always"],
-    "space-before-function-paren": [
-      2,
-      { "anonymous": "always", "named": "never" }
-    ],
+    "space-before-function-paren": [2, { "anonymous": "always", "named": "never" }],
     "space-in-parens": [2, "never"],
     "space-infix-ops": 2,
     "keyword-spacing": 2,
